--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Philip Favour Boluwatife <uniquedivinefavour2002@gmail.com>
+Ikegwuonu Henry <ikegwuonuhenry25@gmail.com>
